@@ -12,10 +12,7 @@ package org.elasticsearch.datageneration.queries;
 import org.elasticsearch.datageneration.FieldType;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.test.ESTestCase;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -28,7 +25,7 @@ public interface LeafQueryGenerator {
      * @param type the type to build a query for
      * @return a generator that can build queries for this type
      */
-    static LeafQueryGenerator buildForType(String type) {
+    static LeafQueryGenerator buildForType(String type, MappingPredicates mappingPredicates) {
         LeafQueryGenerator noQueries = (Map<String, Object> fieldMapping, String path, Object value) -> List.of();
 
         FieldType fieldType = FieldType.tryParse(type);
@@ -38,8 +35,9 @@ public interface LeafQueryGenerator {
 
         return switch (fieldType) {
             case KEYWORD -> new KeywordQueryGenerator();
-            case TEXT -> new TextQueryGenerator();
             case WILDCARD -> new WildcardQueryGenerator();
+            case TEXT -> new TextQueryGenerator();
+            case MATCH_ONLY_TEXT -> new MatchOnlyTextQueryGenerator(mappingPredicates);
             default -> noQueries;
         };
     }
@@ -53,13 +51,14 @@ public interface LeafQueryGenerator {
                     return List.of();
                 }
             }
-            return List.of(QueryBuilders.termQuery(path, value));
+            return List.of(QueryBuilders.termQuery(path, value), QueryBuilders.matchQuery(path, value));
         }
     }
 
     class WildcardQueryGenerator implements LeafQueryGenerator {
         public List<QueryBuilder> generate(Map<String, Object> fieldMapping, String path, Object value) {
-            // Queries with emojis can currently fail due to https://github.com/elastic/elasticsearch/issues/132144
+            // TODO remove when fixed
+            // queries with emojis can currently fail due to https://github.com/elastic/elasticsearch/issues/132144
             if (containsHighSurrogates((String) value)) {
                 return List.of();
             }
@@ -76,25 +75,20 @@ public interface LeafQueryGenerator {
                 }
             }
 
-            var results = new ArrayList<QueryBuilder>();
-            results.add(QueryBuilders.matchQuery(path, value));
-            var phraseQuery = buildPhraseQuery(path, (String) value);
-            if (phraseQuery != null) {
-                results.add(phraseQuery);
-            }
-            return results;
+            return List.of(QueryBuilders.matchQuery(path, value), QueryBuilders.matchPhraseQuery(path, value));
         }
+    }
 
-        private static QueryBuilder buildPhraseQuery(String path, String value) {
-            var tokens = Arrays.asList(value.split("[^a-zA-Z0-9]"));
-            if (tokens.isEmpty()) {
-                return null;
+    record MatchOnlyTextQueryGenerator(MappingPredicates mappingPredicates) implements LeafQueryGenerator {
+
+        public List<QueryBuilder> generate(Map<String, Object> fieldMapping, String path, Object value) {
+            // TODO remove when fixed
+            // match_only_text in nested context fails for synthetic source https://github.com/elastic/elasticsearch/issues/132352
+            if (mappingPredicates.inNestedContext(path)) {
+                return List.of(QueryBuilders.matchQuery(path, value));
             }
 
-            int low = ESTestCase.randomIntBetween(0, tokens.size() - 1);
-            int hi = ESTestCase.randomIntBetween(low + 1, tokens.size());
-            var phrase = String.join(" ", tokens.subList(low, hi));
-            return QueryBuilders.matchPhraseQuery(path, phrase);
+            return List.of(QueryBuilders.matchQuery(path, value), QueryBuilders.matchPhraseQuery(path, value));
         }
     }
 
